# backlink-publisher

./: .cov-baseline.json  .coverage-unit.json  .coveragerc  .dockerignore  .editorconfig  .fix_webui.py  .fix_webui2.py  .gitattributes  .gitignore  .gitlab-ci.yml  .importlinter  .pre-commit-config.yaml  .spectral.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  FINAL_OPTIMIZATION_REPORT.md  Makefile  OPTIMIZATION_COMPLETE_REPORT.md  OPTIMIZATION_PHASE3_REPORT.md  OPTIMIZATION_REPORT.md  README.md  README.zh.md  STEWARDSHIP.md  WEBUI_UX_TEST_GUIDE.md  complexity_budget.toml  config.example.toml  coverage.json  debt_registry.toml  docker-compose.yml  monolith_budget.toml  mypy.ini  pyproject.toml  radon_results.json  serve.py  webui.py
.ai-memory/: MEMORY.md  feedback_gap_analysis_audit.md  feedback_system_tier_markers.md  project_backlink_publisher.md  project_optimization_gaps.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: api-contract.yml  ci.yml  e2e.yml  frontend.yml  phase0-seal-check.yml  plan-claims-gate.yml  plan-claims-radar.yml  plan-redrift-gate.yml
.omo/run-continuation/: ses_16e989edcffeYLF9iXYpD2K92F.json  ses_16eae1477ffe8EMGJNBHkhRdrm.json  ses_16f2014e5ffegBlqZ9YFPx7lzv.json
benchmarks/: test_routing_benchmark.py
docs/: ANALYSIS_REPORT_2026-07-08.md  README.md  active-docs.md  optimization-history.md  quality_optimization_plan.md  sdk-quickstart.md  spa-migration-roadmap.md  windows-setup.md
docs/_archive/: OPTIMIZATION_COMPLETE_REPORT.md  OPTIMIZATION_PHASE3_REPORT.md
docs/architecture/: deterministic-planning-principle.md  event_schema.json  events-db-scale-tripwire-register.md  recon-event-taxonomy.md  sdk-layering.md
docs/archive/: 2026-07-13-branch-consolidation-history.md
docs/audits/: 2026-05-27-recurring-trap-eradication-audit.md  2026-06-17-schema-migration-reader-audit.md  2026-07-02-u1-residual-failures.md  2026-07-03-webui-feature-error-backlog.md  2026-07-06-cli-decomposition-reconciliation-audit.md  2026-07-06-existing-test-failure-baseline.md  2026-07-06-honesty-blueprint-closeout.md  2026-07-06-lite-deferral-trigger-check.md  2026-07-06-webui-legacy-api-retirement-audit.md  2026-07-06-webui-refresh-inventory.md  2026-07-07-architecture-health-reverify.md  2026-07-07-debt-registry-triage.md
docs/brainstorms/: 2026-05-12-adapter-retry-backoff-requirements.md  2026-05-12-anchor-text-and-blank-target-requirements.md  2026-05-13-anchor-profile-scheduler-requirements.md  2026-05-13-checkpoint-resume-requirements.md  2026-05-13-oauth-preflight-refresh-requirements.md  2026-05-13-work-themed-backlinks-requirements.md  2026-05-14-anchor-entropy-alarm-requirements.md  2026-05-14-mandatory-linkcheck-lang-gate-requirements.md  2026-05-15-lessons-kit-curation-requirements.md  2026-05-15-publish-idempotency-requirements.md  2026-05-15-telegraph-adapter-requirements.md  2026-05-15-velog-adapter-requirements.md  2026-05-18-architecture-health-refactor-requirements.md  2026-05-18-codebase-hygiene-requirements.md  2026-05-18-event-substrate-corpus-requirements.md  2026-05-18-footprint-regression-gate-requirements.md  2026-05-18-monolith-loc-ceiling-requirements.md  2026-05-18-pytest-bug-sweep-requirements.md  2026-05-18-settings-channel-collapse-requirements.md  (+57 more)
frontend/: AGENTS.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
openapi/: backlink-api.yaml
scripts/: audit_credential_permissions.py  backfill_empty_url_checkpoints.py  channel_probe.py  check-worktrees.sh  check_imports.py  check_monolith_budget.py  click-track-periodic.sh  com.backlinkpublisher.clicktrack.plist  com.dex.bp-citations.plist  com.dex.bp-full-pipeline.plist  com.dex.bp-keepalive.plist  com.dex.bp-optimization.plist  com.dex.bp-pipeline.plist  com.dex.bp-plan-gap.plist  com.dex.bp-probe-index.plist  com.dex.bp-probe-ranking.plist  com.dex.bp-recheck.plist  com.dex.bp-selector-drift.plist  com.dex.bp-weights.plist  compare_benchmarks.py  gen_openapi.py  install-full-pipeline-launchd.sh  install-leak-check.sh  install-optimization-launchd.sh  install-pre-push-hook.sh  install-recheck-launchd.sh  launcher.command  launcher.ps1  medium_bind_spike.py  optimize_static.py  platform_discovery.py  post-merge-hook.bat  pre-flight-check.sh  prep-release.sh  quickstart.bat  quickstart.sh  remove-writeas.py  run-citations-periodic.sh  run-full-pipeline.bat  run-full-pipeline.sh  (+9 more)
tests/: AGENTS.md  _config_three_url_test_helpers.py  _mode_assertions.py  _plan_test_helpers.py  _publish_backlinks_test_helpers.py  conftest.py  test_activation_readiness_tripwire.py  test_adapter_429_retry_contract.py  test_adapter_base.py  test_adapter_blogger_api.py  test_adapter_blogger_api_xss_contract.py  test_adapter_catalog.py  test_adapter_catalog_registration.py  test_adapter_catalog_user_dir.py  test_adapter_config_driven.py  test_adapter_dispatcher.py  test_adapter_dofollow_gate.py  test_adapter_exception_logging.py  test_adapter_ghpages.py  test_adapter_hashnode.py  test_adapter_hatena_atompub.py  test_adapter_http_form_post.py  test_adapter_livejournal_api.py  test_adapter_medium_api.py  test_adapter_medium_browser.py  test_adapter_notesio.py  test_adapter_publish_delay_env.py  test_adapter_qiita.py  test_adapter_retry.py  test_adapter_telegraph_api.py  test_adapter_telegraph_api_self_heal.py  test_adapter_telegraph_cdp_chain.py  test_adapter_txtfyi_api.py  test_adapter_velog_graphql.py  test_adapter_writeas.py  test_adapter_zenn.py  test_agents_md_has_binding_section.py  test_anchor_lang.py  test_anchor_metrics.py  test_anchor_preflight.py  (+652 more)
webui_app/: AGENTS.md  __init__.py  binding_forms.py  binding_status.py  campaign_worker.py  constants.py  health_metrics.py  helpers.py  medium_liveness.py  medium_login.py  scheduler.py
webui_store/: __init__.py  base.py  batch_ops.py  campaign_store.py  channel_status.py  drafts.py  error_reports.py  history.py  onboarding.py  operation_store.py  profiles.py  publish_defaults.py  queue_store.py  registry.py  schedule.py  sqlite_base.py  verify_health.py
(+1414 files in other folders)
