[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backlink-publisher"
version = "0.5.0"
description = "A local-first backlink publishing pipeline for Blogger and Medium."
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=4.2",
    "google-api-python-client>=2.196,<3",
    "google-auth-oauthlib>=1.4",
    "google-auth-httplib2>=0.2",
    "playwright>=1.55,<2",
    "requests>=2.32.4,<3",
    "websocket-client>=1.9",
    "beautifulsoup4>=4.13,<5",
    "flask>=3.1,<4",
    "flask-limiter>=3.5,<5",
    "apscheduler>=3.11,<4",
    "apiflask>=3.1,<4",
    "pydantic>=2.5",
    "pyyaml>=6.0.3",
    "google-analytics-data>=0.18,<1",
    "structlog>=24.1,<26",
]

[project.optional-dependencies]
# radon is pinned to exact version (deviates from house `>=` style) because SLOC counts
# must be deterministic across CI matrix rows; bumping radon requires re-measuring all
# 5 monolith ceilings in the same PR. See docs/plans/2026-05-18-006-feat-monolith-sloc-ceiling-plan.md.
dev = ["pytest>=8.4", "pytest-mock>=3.15", "pytest-timeout>=2.4", "pytest-socket>=0.7", "pytest-env>=1.6", "pytest-asyncio>=1.1,<2", "pytest-xdist>=3.6", "pytest-cov>=6.0", "hypothesis>=6.151", "radon==6.0.1", "mypy>=1.8", "mutmut>=2.4", "vulture>=2.16", "import-linter>=2.0"]
# webwright: Microsoft Research's browser agent framework (microsoft/Webwright).
# The PyPI package "webwright==0.0.7" is an unrelated project from MittaAI and MUST NOT be used.
# Pin to a specific commit SHA — upstream is in rapid iteration with no formal releases.
# Upgrade manually after evaluating upstream changelog: https://github.com/microsoft/Webwright/commits/main
dev-webwright = ["webwright @ git+https://github.com/microsoft/Webwright.git@4a46f282ec37f27d6003cc498a977939d62d9015"]

[project.scripts]
bp = "backlink_publisher.cli.bp:main"
plan-backlinks = "backlink_publisher.cli.plan_backlinks:main"
spray-backlinks = "backlink_publisher.cli.spray_backlinks:main"
publish-backlinks = "backlink_publisher.cli.publish_backlinks:main"
plan-gap = "backlink_publisher.cli.plan.plan_gap:main"
plan-check = "backlink_publisher.cli.plan.plan_check:main"
generate-backlink-text = "backlink_publisher.cli.plan.generate_backlink_text:main"
canonical-expand = "backlink_publisher.cli.plan.canonical_expand:main"
dispatch-backlinks = "backlink_publisher.cli.publish.dispatch_backlinks:main"
publish-metrics = "backlink_publisher.cli.publish.publish_metrics:main"
report-anchors = "backlink_publisher.cli.publish.report_anchors:main"
verify-dofollow = "backlink_publisher.cli.publish.verify_dofollow:main"
validate-backlinks = "backlink_publisher.cli.publish.validate_backlinks:main"
canary-seed = "backlink_publisher.cli.spray.canary_seed:main"
canary-targets = "backlink_publisher.cli.spray.canary_targets:main"
bind-channel = "backlink_publisher.cli.admin.bind_channel:main"
velog-login = "backlink_publisher.cli.admin.velog_login:main"
medium-login = "backlink_publisher.cli.admin.medium_login:main"
frw-login = "backlink_publisher.cli.admin.frw_login:main"
audit-state = "backlink_publisher.cli.admin.audit_state:main"
backup-state = "backlink_publisher.cli.admin.state_backup:backup_main"
restore-state = "backlink_publisher.cli.admin.state_backup:restore_main"
phase0-seal = "backlink_publisher.cli.admin.phase0_seal:main"
resume = "backlink_publisher.cli.admin.resume:main"
bp-runs = "backlink_publisher.cli.admin.runs:main"
equity-ledger = "backlink_publisher.cli.reporting.equity_ledger:main"
footprint = "backlink_publisher.cli.reporting.footprint:main"
channel-scorecard = "backlink_publisher.cli.reporting.channel_scorecard:main"
recheck-overlay = "backlink_publisher.cli.reporting.recheck_overlay:main"
decay-alert = "backlink_publisher.cli.reporting.decay_alert:main"
debt-report = "backlink_publisher.cli.reporting.debt_report:main"
weights = "backlink_publisher.cli.reporting.weights:main"
referral-attribute = "backlink_publisher.cli.reporting.referral_attribute:main"
click-track = "backlink_publisher.cli.reporting.click_track:main"
pr-opportunities = "backlink_publisher.cli.reporting.pr_opportunities:main"
gate-probe = "backlink_publisher.cli.ops.gate_probe:main"
preflight-targets = "backlink_publisher.cli.ops.preflight_targets:main"
cull-channels = "backlink_publisher.cli.ops.cull_channels:main"
platform-health = "backlink_publisher.cli.ops.platform_health:main"
health-check = "backlink_publisher.cli.ops.health_check:main"
recheck-backlinks = "backlink_publisher.cli.ops.recheck_backlinks:main"
probe-citations = "backlink_publisher.cli.ops.probe_citations:main"
probe-index = "backlink_publisher.cli.ops.probe_index:main"
probe-ranking = "backlink_publisher.cli.ops.probe_ranking:main"
keepalive-run = "backlink_publisher.cli.ops.keepalive_run:main"
keepalive-status = "backlink_publisher.cli.ops.keepalive_status:main"
keepalive-reset-exhausted = "backlink_publisher.cli.ops.keepalive_reset_exhausted:main"
pipeline-orchestrator = "backlink_publisher.cli.ops.pipeline_orchestrator:main"
comment = "backlink_publisher.cli.ops.comment:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# PYTHONHASHSEED=0 is required by the Footprint Regression Gate
# (tests/test_footprint_regression.py + R10 from Plan 2026-05-18-007).
# Set here via pytest-env so `pytest tests/` works out of the box locally;
# .github/workflows/ci.yml also pins it at the job level for belt+suspenders.
env = ["PYTHONHASHSEED=0"]
# Defensive: zero @pytest.mark.asyncio markers exist in the tree (confirmed
# at Wave 3 time). strict mode is already the default in pytest-asyncio 1.x
# but is declared explicitly so any future async-fixture conversion surfaces
# a clear error rather than a silent mode mismatch.
asyncio_mode = "strict"
# webui_app/ and webui_store/ live at the repo root (not under src/), so any
# test that imports them (e.g. tests/test_bind_channel_driver.py) used to
# require `PYTHONPATH=.`. This pin makes `pytest tests/` collect them out
# of the box from any worktree without a per-tree environment hack.
pythonpath = [".", "src"]
markers = [
    "real_ssrf_check: exercise the real _check_url_for_ssrf path instead of the default-bypass autouse fixture (tests/test_content_fetch.py)",
    "real_content_fetch: exercise the real content_fetch.verify_urls_batch / verify_url_has_content path instead of the default-pass autouse fixture (tests/test_content_fetch.py applies this module-wide)",
    "real_image_gen: exercise the real FRW image-gen endpoint instead of mocking; opt-in operator-only, never runs in CI (Plan 2026-05-20-001 Unit 2)",
    "real_browser_publish_smoke: open live channel compose URL in attached Chrome and verify selectors against current DOM; opt-in operator-only (Plan 2026-05-21-001 Unit 4a+)",
    "real_live_publish: run the real-credential non-author publish path against a throwaway account in draft mode; opt-in operator-only, never runs in CI (Plan 2026-06-05-008 R7/R8)",
    "unit: fast, isolated tests with no external dependencies; run on every push (default tier)",
    "integration: tests that touch disk, database, or external services; run on CI per-PR",
    "e2e: full end-to-end tests requiring real network or browser; opt-in, run pre-merge or nightly",
]

[tool.towncrier]
package = "backlink_publisher"
package_dir = "src"
filename = "CHANGELOG.md"
directory = "changelog.d"
version = "0.5.0"

[tool.coverage.run]
source = ["backlink_publisher"]
relative_files = true
branch = true
omit = ["*/tests/*", "*/.egg/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true
fail_under = 80

[tool.coverage.json]
pretty_print = true
