[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backlink-publisher"
version = "0.5.0"
description = "A local-first backlink publishing pipeline for Blogger and Medium."
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=4.2",
    "google-api-python-client>=2.196,<3",
    "google-auth-oauthlib>=1.4",
    "google-auth-httplib2>=0.2",
    "requests>=2.32.4,<3",
    "websocket-client>=1.9",
    "beautifulsoup4>=4.13,<5",
    "flask>=3.1,<4",
    "flask-limiter>=3.5,<5",
    "apscheduler>=3.11,<4",
    "apiflask>=3.1,<4",
    "pydantic>=2.5",
    "pyyaml>=6.0.3",
    "structlog>=24.1,<27",
    "flask-compress>=1.14,<2",
    "waitress>=3.0,<4",
]

[project.optional-dependencies]
# radon is pinned to exact version (deviates from house `>=` style) because SLOC counts
# must be deterministic across CI matrix rows; bumping radon requires re-measuring all
# 5 monolith ceilings in the same PR. See docs/plans/2026-05-18-006-feat-monolith-sloc-ceiling-plan.md.
# ruff is pinned to exact version for deterministic lint results on CI.
# playwright is in dev (not core) deps: runtime treats it as the optional
# [browser] extra with graceful DependencyError paths, but the unit suite
# imports playwright types directly (medium/telegraph browser-chain tests),
# so CI's `pip install -e ".[dev]"` must provide the package.
dev = ["pytest>=8.4", "pytest-mock>=3.15", "pytest-timeout>=2.4", "pytest-socket>=0.7", "pytest-env>=1.6", "pytest-asyncio>=1.1,<2", "pytest-xdist>=3.6", "pytest-cov>=6.0", "pytest-benchmark>=5.1", "pytest-rerunfailures>=14.0", "hypothesis>=6.151", "radon==6.0.1", "ruff>=0.15,<1", "mypy>=1.8", "mutmut>=2.4", "vulture>=2.16", "import-linter>=1.6", "pip-audit>=2.7", "playwright>=1.55,<2"]
# browser: Playwright for browser-based publishing and credential binding
browser = ["playwright>=1.55,<2"]
# analytics: Google Analytics Data API for referral attribution and click tracking
analytics = ["google-analytics-data>=0.18,<1"]
# webwright: Microsoft Research's browser agent framework (microsoft/Webwright).
# The PyPI package "webwright==0.0.7" is an unrelated project from MittaAI and MUST NOT be used.
# Pin to a specific commit SHA -- upstream is in rapid iteration with no formal releases.
# Upgrade manually after evaluating upstream changelog: https://github.com/microsoft/Webwright/commits/main
dev-webwright = ["webwright @ git+https://github.com/microsoft/Webwright.git@4a46f282ec37f27d6003cc498a977939d62d9015"]

[project.scripts]
bp = "backlink_publisher.cli.bp:main"
plan-backlinks = "backlink_publisher.cli.plan_backlinks:main"
spray-backlinks = "backlink_publisher.cli.spray_backlinks:main"
footprint = "backlink_publisher.cli.reporting.footprint:main"
validate-backlinks = "backlink_publisher.cli.validate_backlinks:main"
phase0-seal = "backlink_publisher.cli.admin.phase0_seal:main"
publish-backlinks = "backlink_publisher.cli.publish_backlinks:main"
report-anchors = "backlink_publisher.cli.publish.report_anchors:main"
equity-ledger = "backlink_publisher.cli.reporting.equity_ledger:main"
bind-channel = "backlink_publisher.cli.admin.bind_channel:main"
velog-login = "backlink_publisher.cli.admin.velog_login:main"
medium-login = "backlink_publisher.cli.admin.medium_login:main"
plan-check = "backlink_publisher.cli.plan.plan_check:main"
frw-login = "backlink_publisher.cli.admin.frw_login:main"
audit-state = "backlink_publisher.cli.admin.audit_state:main"
preflight-targets = "backlink_publisher.cli.ops.preflight_targets:main"
cull-channels = "backlink_publisher.cli.ops.cull_channels:main"
channel-scorecard = "backlink_publisher.cli.reporting.channel_scorecard:main"
publish-metrics = "backlink_publisher.cli.publish.publish_metrics:main"
canary-targets = "backlink_publisher.cli.spray.canary_targets:main"
canary-seed = "backlink_publisher.cli.spray.canary_seed:main"
comment = "backlink_publisher.cli.comment:main"
dispatch-backlinks = "backlink_publisher.cli.publish.dispatch_backlinks:main"
generate-backlink-text = "backlink_publisher.cli.plan.generate_backlink_text:main"
plan-gap = "backlink_publisher.cli.plan.plan_gap:main"
platform-health = "backlink_publisher.cli.ops.platform_health:main"
recheck-backlinks = "backlink_publisher.cli.ops.recheck_backlinks:main"
decay-alert = "backlink_publisher.cli.reporting.decay_alert:main"
gate-probe = "backlink_publisher.cli.ops.gate_probe:main"
recheck-overlay = "backlink_publisher.cli.reporting.recheck_overlay:main"
canonical-expand = "backlink_publisher.cli.plan.canonical_expand:main"
pr-opportunities = "backlink_publisher.cli.pr_opportunities:main"
click-track = "backlink_publisher.cli.click_track:main"
referral-attribute = "backlink_publisher.cli.referral_attribute:main"
weights = "backlink_publisher.cli.reporting.weights:main"
debt-report = "backlink_publisher.cli.reporting.debt_report:main"
verify-dofollow = "backlink_publisher.cli.publish.verify_dofollow:main"
probe-citations = "backlink_publisher.cli.ops.probe_citations:main"
probe-index = "backlink_publisher.cli.ops.probe_index:main"
probe-ranking = "backlink_publisher.cli.ops.probe_ranking:main"
backup-state = "backlink_publisher.cli.admin.state_backup:backup_main"
restore-state = "backlink_publisher.cli.admin.state_backup:restore_main"
keepalive-run = "backlink_publisher.cli.ops.keepalive_run:main"
keepalive-status = "backlink_publisher.cli.ops.keepalive_status:main"
keepalive-reset-exhausted = "backlink_publisher.cli.ops.keepalive_reset_exhausted:main"
pipeline-orchestrator = "backlink_publisher.cli.pipeline_orchestrator:main"
health-check = "backlink_publisher.cli.ops.health_check:main"
bp-runs = "backlink_publisher.cli.runs:main"
resume = "backlink_publisher.cli.resume:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Ruff configuration -- unified Python linter and formatter.
# Replaces black/flake8/isort for this project.
# See https://docs.astral.sh/ruff/ for all options.

# Target Python version
target-version = "py311"

# Line length matching project convention
line-length = 100

[tool.ruff.lint]
# Start with rules that catch real bugs and enforce style.
# F = pyflakes (errors), E/W = pycodestyle (convention),
# UP = pyupgrade (Python 3.11+ idioms), I = isort (import ordering).
select = [
    "F",    # pyflakes errors
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "I",    # isort
]

# 2026-07-06 (hardening-sweep C1): deliberately NOT enabling flake8-blind-except
# (BLE, e.g. BLE001 "blind except Exception") here. This project already governs
# `except Exception` hygiene via `debt_registry.toml` + `# debt: <slug>` site
# comments (the methodology established in Phase 3 D2); adding BLE001 on top would
# require a per-site `# noqa: BLE001` for every judged-acceptable broad catch
# (~465 sites at last count), duplicating the tracking the debt registry already
# provides instead of adding new signal. C1 only removed the ~218 `# noqa: BLE001`
# comments that were dead (BLE was never enabled, so they suppressed nothing) plus
# other noqa already redundant with per-file-ignores below -- it did not change this
# select list. Re-evaluate enabling BLE once the D2/D3 except-Exception
# classification work (see this repo's hardening-sweep plan, Sprint D) has
# produced enough data to judge whether a second, rule-based governance layer is
# actually worth the duplication.

# Rules we explicitly allow for this codebase's patterns
ignore = [
    "E501",  # line-too-long -- handled by formatter
]

# Per-file rule overrides
[tool.ruff.lint.per-file-ignores]
# Test files: allow short variable names, multi-statement lines, etc.
"tests/*" = [
    "E741",   # ambiguous-variable-name -- test helpers use single-letter vars
    "E702",   # multiple-statements-on-one-line -- test idioms
    "E731",   # lambda-assignment -- test patterns
    "UP038",  # isinstance() with union -- tests use this pattern
    "F401",   # unused-import -- test fixtures import for side effects
]
# __init__.py files: allow F401 for re-exports + E402 for late re-exports
"*/__init__.py" = [
    "F401",   # unused-import -- re-exports are intentional
    "E402",   # module-import-not-at-top-of-file -- late re-exports
]
# Generated/migration files: be lenient
"**/migrations/*" = ["E402"]
# Adapters with mimetypes.add_type() side-effect before module imports
"src/backlink_publisher/publishing/adapters/blogger_api.py" = ["E402"]
"src/backlink_publisher/publishing/adapters/telegraph_api.py" = ["E402"]
# Registry: imports after logger setup is structural
"src/backlink_publisher/publishing/registry.py" = ["E402"]
# Adapters __init__: mid-module imports for catalog registration
"src/backlink_publisher/publishing/adapters/__init__.py" = ["E402"]
# _verify_setup: imports after docstring for clarity
"src/backlink_publisher/publishing/_verify_setup.py" = ["E402"]
# WebUI v1 __init__: Flask blueprint pattern with late imports
"webui_app/api/v1/__init__.py" = ["E402"]
# settings_credentials: imports after dict definitions for readability
"webui_app/api/v1/settings_credentials.py" = ["E402"]
# oauth routes: imports after constants for readability
"webui_app/routes/oauth.py" = ["E402"]
# http_session / content/fetch: SSL context import after module-level constants
"src/backlink_publisher/_util/http_session.py" = ["E402"]
"src/backlink_publisher/content/fetch.py" = ["E402"]
# events/_project_reducers: re-exports at module end
"src/backlink_publisher/events/_project_reducers.py" = ["E402"]
# _publish_helpers: re-exports from _publish_cli (monolith split re-exports)
"src/backlink_publisher/cli/_publish_helpers.py" = ["F401"]
# webui_store/sqlite_base: imports after module-level constants
"webui_store/sqlite_base.py" = ["E402"]

[tool.ruff.lint.isort]
# Sort imports with known-first-party and section ordering
known-first-party = ["backlink_publisher", "webui_app", "webui_store"]
force-sort-within-sections = true
order-by-type = false

[tool.ruff.format]
# Match the project's existing style (no trailing commas, etc.)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
# PYTHONHASHSEED=0 is required by the Footprint Regression Gate
# (tests/test_footprint_regression.py + R10 from Plan 2026-05-18-007).
# Set here via pytest-env so `pytest tests/` works out of the box locally;
# .github/workflows/ci.yml also pins it at the job level for belt+suspenders.
env = ["PYTHONHASHSEED=0"]
# Defensive: zero @pytest.mark.asyncio markers exist in the tree (confirmed
# at Wave 3 time). strict mode is already the default in pytest-asyncio 1.x
# but is declared explicitly so any future async-fixture conversion surfaces
# a clear error rather than a silent mode mismatch.
asyncio_mode = "strict"
# webui_app/ and webui_store/ live at the repo root (not under src/), so any
# test that imports them (e.g. tests/test_bind_channel_driver.py) used to
# require `PYTHONPATH=.`. This pin makes `pytest tests/` collect them out
# of the box from any worktree without a per-tree environment hack.
pythonpath = [".", "src"]
markers = [
    "real_ssrf_check: exercise the real _check_url_for_ssrf path instead of the default-bypass autouse fixture (tests/test_content_fetch.py)",
    "real_content_fetch: exercise the real content_fetch.verify_urls_batch / verify_url_has_content path instead of the default-pass autouse fixture (tests/test_content_fetch.py applies this module-wide)",
    "real_image_gen: exercise the real FRW image-gen endpoint instead of mocking; opt-in operator-only, never runs in CI (Plan 2026-05-20-001 Unit 2)",
    "real_browser_publish_smoke: open live channel compose URL in attached Chrome and verify selectors against current DOM; opt-in operator-only (Plan 2026-05-21-001 Unit 4a+)",
    "real_live_publish: run the real-credential non-author publish path against a throwaway account in draft mode; opt-in operator-only, never runs in CI (Plan 2026-06-05-008 R7/R8)",
    "unit: fast, isolated tests with no external dependencies; run on every push (default tier)",
    "integration: tests that touch disk, database, or external services; run on CI per-PR",
    "e2e: full end-to-end tests requiring real network or browser; opt-in, run pre-merge or nightly",
    "seam: test module directly imports a seam module (backlink_publisher.events/gap/idempotency/ledger or webui_app.api) -- auto-applied by conftest.py's import-based AST scan (Plan 2026-06-30-001 C1a); excluded from --reruns in ci.yml so a real intermittent failure in these I/O/state-heavy modules can't be silently retried away",
]

[tool.towncrier]
package = "backlink_publisher"
package_dir = "src"
filename = "CHANGELOG.md"
directory = "changelog.d"
version = "0.5.0"

[tool.coverage.run]
source = ["backlink_publisher"]
relative_files = true
branch = true
omit = ["*/tests/*", "*/.egg/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true
fail_under = 80

[tool.coverage.json]
pretty_print = true

# -- import-linter ----------------------------------------------------------
# Static import-graph enforcement. Uses `forbidden` contracts (not `layers`)
# because domain packages may legitimately import each other; only the
# cli->domain->_util direction must be enforced one-way.
# See docs/plans/2026-06-24-002-refactor-codebase-decoupling-plan.md U7.

[tool.importlinter]
root_packages = ["backlink_publisher"]

[[tool.importlinter.contracts]]
name = "Domain packages must not import from cli/"
type = "forbidden"
source_modules = [
    "backlink_publisher.publishing",
    "backlink_publisher.keepalive",
    "backlink_publisher.events",
    "backlink_publisher.anchor",
    "backlink_publisher._validate_engine",
    "backlink_publisher._util",
    "backlink_publisher.config",
    "backlink_publisher.content",
    "backlink_publisher.linkcheck",
    "backlink_publisher.gap",
    "backlink_publisher.recheck",
    "backlink_publisher.referral",
    "backlink_publisher.health",
    "backlink_publisher.canary",
    "backlink_publisher.ledger",
    "backlink_publisher.idempotency",
    "backlink_publisher.optimization",
    "backlink_publisher.scorecard",
    "backlink_publisher._dispatch_router",
    "backlink_publisher.gates",
    "backlink_publisher.schedule",
    "backlink_publisher.audit",
    "backlink_publisher.geo",
    "backlink_publisher.click_track",
    "backlink_publisher.comment_outreach",
    "backlink_publisher.llm",
    "backlink_publisher.gsc",
]
forbidden_modules = ["backlink_publisher.cli"]
# Pre-existing violations that require deeper refactoring (deferred):
ignore_imports = [
    # publishing.adapters.instant_web -> cli._bind.chrome_backend
    "backlink_publisher.publishing.adapters.instant_web -> backlink_publisher.cli._bind.chrome_backend",
    # SDK -> CLI (SDK wraps CLI commands; layer fixing deferred)
    "backlink_publisher.sdk._publish_runtime -> backlink_publisher.cli.publish_backlinks",
    "backlink_publisher.sdk._publish_runtime -> backlink_publisher.cli._publish_helpers",
    "backlink_publisher.sdk.api -> backlink_publisher.cli.plan_backlinks._engine",
    "backlink_publisher.sdk.api -> backlink_publisher.cli._report_engine",
    # keepalive -> SDK (SDK wraps CLI)
    "backlink_publisher.keepalive.chain -> backlink_publisher.sdk.api",
]

[[tool.importlinter.contracts]]
name = "_util must not import from domain or cli"
type = "forbidden"
source_modules = ["backlink_publisher._util"]
forbidden_modules = [
    "backlink_publisher.cli",
    "backlink_publisher.publishing",
    "backlink_publisher.keepalive",
    "backlink_publisher.events",
    "backlink_publisher._validate_engine",
    "backlink_publisher.config",
    "backlink_publisher.content",
    "backlink_publisher.linkcheck",
    "backlink_publisher.gap",
    "backlink_publisher.recheck",
    "backlink_publisher.referral",
    "backlink_publisher.health",
    "backlink_publisher.canary",
    "backlink_publisher.ledger",
    "backlink_publisher.idempotency",
    "backlink_publisher.optimization",
    "backlink_publisher.scorecard",
    "backlink_publisher._dispatch_router",
    "backlink_publisher.gates",
    "backlink_publisher.schedule",
    "backlink_publisher.audit",
    "backlink_publisher.geo",
    "backlink_publisher.click_track",
    "backlink_publisher.llm",
	    "backlink_publisher.gsc",
	    "backlink_publisher.anchor",
]
# Pre-existing _util -> domain violations (P14 A1-A5: all resolved -- violations
# extracted to _util.paths, _util.text_validation, _util.constants):
ignore_imports = [
]
